# Bolera_Full_v2

./: README.md
PruebaGlobal/: PruebaGlobal.atsln  diagrama_Interrupciones.txt  diagrama_flujo.txt
PruebaGlobal/PruebaGlobal/: Assembly2.s  Bolera.c  Bolera.h  CMakeLists.txt  ConfiguracionV1.c  ConfiguracionV1.h  Displays.c  Displays.h  Elevadores.c  Elevadores.h  IncFile1.h  Lanzador.c  Lanzador.h  PruebaGlobal.componentinfo.xml  PruebaGlobal.cproj  Sensores_bolos.c  Sensores_bolos.h  main.c  stimuli.stim
PruebaGlobal/PruebaGlobal/Debug/: Assembly2.d  Bolera.d  ConfiguracionV1.d  Displays.d  Elevadores.d  Lanzador.d  Makefile  PruebaGlobal.elf  PruebaGlobal.hex  PruebaGlobal.lss  PruebaGlobal.map  PruebaGlobal.srec  Sensores_bolos.d  main.d  makedep.mk
